add_library(sound 
bcfire01_48k.wav.c
gameBoyStartup.wav.c
gameOver48k.wav.c
gunEmpty48k.wav.c
ouch48k.wav.c
pacmanDeath.wav.c
powerUp48k.wav.c
screamAndDie48k.wav.c
sound.c
p1Frozen.c
p1Unfrozen.c
p2Frozen.c
p2Unfrozen.c
p3Frozen.c
p3Unfrozen.c
p4Frozen.c
p4Unfrozen.c
)

target_link_libraries(sound)
